@@ -2,6 +2,7 @@
 ========
 -Fixed operators is_null and is_not_null
 -Added hbase shell query in the log and in the execution trace
+-Undelegating the operators GE, GT, LE, LT because of there isn´t numeric comparator in HBase
 
 20131025
 ========
